inner class for welcome window, and player test